--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   </style>
 </head>
 <body>
+<img src="https://raw.githubusercontent.com/usuario/repositorio/main/caminho/para/logo.png" alt="Logo" style="height: 80px;" />
+<div style="text-align: center;">
+  <img src="URL-da-imagem" alt="Logo" style="height: 80px;" />
+</div>
+
   <h2>📍 Localização Rodoviária</h2>
 
  <script>
@@ -224,3 +229,4 @@
   </script>
 </body>
 </html>
+
