--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       cursor: pointer;
       display: inline-block;
     }
+    button {
+  font-size: 18px;         /* Tamanho da fonte maior */
+  padding: 12px 24px;      /* Espaçamento interno maior */
+  display: block;          /* Faz cada botão ocupar uma linha */
+  margin: 10px auto;       /* Centraliza horizontalmente */
+  width: 80%;              /* Largura relativa à página */
+  max-width: 400px;        /* Limita a largura máxima */
+  text-align: center;      /* Centraliza o texto */
+}
   </style>
 </head>
 <body>
@@ -229,4 +238,5 @@
   </script>
 </body>
 </html>
+
 
