--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div style="text-align: center;">
   <img src="URL-da-imagem" alt="Logo" style="height: 80px;" />
 </div>
-
+<img src="logo.jpg" alt="Logo do site" style="height: 80px; display: block; margin: 0 auto;" />
   <h2>📍 Localização Rodoviária</h2>
 
  <script>
@@ -238,5 +238,6 @@
   </script>
 </body>
 </html>
+
 
 
