--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
   max-width: 400px;        /* Limita a largura máxima */
   text-align: center;      /* Centraliza o texto */
 }
+    body {
+  font-family: Arial, sans-serif;
+  padding: 10px;
+  margin: 0;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h2 {
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 20px;
+}
+
+button, label {
+  font-size: 16px;
+  padding: 12px 20px;
+  margin: 10px auto;
+  display: block;
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+}
+
+input[type="file"] {
+  display: block;
+  margin: 10px auto;
+}
+
+#output, #alerta {
+  text-align: center;
+  margin-top: 10px;
+}
   </style>
 </head>
 <body>
@@ -238,6 +277,7 @@
   </script>
 </body>
 </html>
+
 
 
 
