--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
   </style>
 </head>
 <body>
+  <div style="text-align: center; margin-bottom: 20px;">
+    <img src="logo.jpg" alt="Logo da empresa" style="max-width: 200px; height: auto;" />
+  </div>
   <h2>📍 Localização Rodoviária</h2>
 
  <script>
@@ -251,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
